test04/blue-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-dep
  labels:
    app: blue-dep
spec:
  selector:
    matchLabels:
      run: blue-app
  replicas: 3
  template:
    metadata:
      labels:
        run: blue-app
    spec:
      volumes:
      - name: app-config
        configMap:
          name: blue-config
      containers:
      - name: blue-server
        image: nginx:1.27.2-alpine-slim
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
  labels:
    app: blue-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: blue-app
