test04/green-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-dep
  labels:
    app: green-dep
spec:
  selector:
    matchLabels:
      run: green-app
  replicas: 3
  template:
    metadata:
      labels:
        run: green-app
    spec:
      volumes:
      - name: green-config
        configMap:
          name: green-config
      containers:
      - name: green-server
        image: nginx:1.27.2-alpine-slim
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: green-config
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
  labels:
    app: green-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: green-app
